<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginVertical="2dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sachTK_bia"
            android:layout_width="68dp"
            android:layout_height="96dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/demo"
            app:shapeAppearanceOverlay="@style/roundImage10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="8dp" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sachTK_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/googlesans_regular"
            android:text="@string/book_name"
            android:textColor="@color/c_00204A"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sachTK_tacGia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/googlesans_regular"
            android:text="@string/book_author"
            android:textSize="14dp"
            android:textColor="@color/c_45505F"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sachTK_loai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:fontFamily="@font/googlesans_regular"
                android:text="Sách điện tử"
                android:textColor="@color/c_45505F" />
            <TextView
                android:id="@+id/sachTK_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/googlesans_regular"
                android:text="@string/book_star"
                android:textSize="14dp"
                android:textColor="@color/c_45505F"
                app:drawableRightCompat="@drawable/ic_ratingbar_star_fill_14_grey" />
        </LinearLayout>
        <TextView
            android:id="@+id/sachTK_gia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/googlesans_regular"
            android:text="170.000 đ"
            android:textSize="14dp"
            android:textColor="@color/c_45505F"/>

    </LinearLayout>
</LinearLayout>